--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,11 @@
       <nav class="main-nav main-nav--closed">
         <div class="main-nav__logo-wrapper">
           <a class="main-nav__logo" href="#">
-            <img class="main-nav__img main-nav__img--logo" src="img/icon-logo-mobile.svg" alt="">
+            <picture>
+              <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="main-nav__img main-nav__img--logo" src="img/icon-logo-mobile.svg" alt="">
+            </picture>
           </a>
           <a class="main-nav__logo" href="#">
             <img class="main-nav__img main-nav__img--text" src="img/logo-mobile-header.svg" alt="">
@@ -35,7 +39,11 @@
             <div class="catalog-item__info">
               <div class="catalog-item-container">
                 <a class="catalog-item__link" href="chicken-small.html">
-                  <img class="catalog-item__img" src="img/chicken-small-mobile@1x.jpg" alt="банка Cat Energy Pro 500 г">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/catalog-chicken-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                    <img class="catalog-item__img" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg" alt="банка Cat Energy Pro 500 г">
+                </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -65,7 +73,11 @@
             <div class="catalog-item__info">
               <div class="catalog-item-container">
                 <a class="catalog-item__link" href="chicken-small.html">
-                  <img class="catalog-item__img" src="img/chicken-big-mobile@1x.jpg" alt=">банка Cat Energy Pro 1000 г">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                  <img class="catalog-item__img" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg" alt=">банка Cat Energy Pro 1000 г">
+                  <picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -95,7 +107,11 @@
             <div class="catalog-item__info">
               <div class="catalog-item-container">
                 <a class="catalog-item__link" href="chicken-small.html">
-                  <img class="catalog-item__img" src="img/fish-small-mobile@1x.jpg" alt="банка Cat Energy Pro 500 г">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                  <img class="catalog-item__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg" alt="банка Cat Energy Pro 500 г">
+                </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -125,7 +141,11 @@
             <div class="catalog-item__info">
               <div class="catalog-item-container">
                 <a class="catalog-item__link" href="chicken-small.html">
-                  <img class="catalog-item__img" src="img/fish-big-mobile@1x.jpg" alt="банка Cat Energy Pro 1000 г">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                  <img class="catalog-item__img" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg" alt="банка Cat Energy Pro 1000 г">
+                </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -155,7 +175,11 @@
             <div class="catalog-item__info">
               <div class="catalog-item-container">
                 <a class="catalog-item__link" href="chicken-small.html">
-                  <img class="catalog-item__img" src="img/buckwheat-small-mobile@1x.jpg" alt="банка Cat Energy Slim 500 г">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                      <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                  <img class="catalog-item__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg" alt="банка Cat Energy Slim 500 г">
+                </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -185,7 +209,11 @@
             <div class="catalog-item__info">
               <div class="catalog-item-container">
                 <a class="catalog-item__link" href="chicken-small.html">
-                  <img class="catalog-item__img" src="img/buckwheat-big-mobile@1x.jpg" alt="банка Cat Energy Slim 1000 г">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                      <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                  <img class="catalog-item__img" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg" alt="банка Cat Energy Slim 1000 г">
+                </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -215,7 +243,11 @@
             <div class="catalog-item__info">
               <div class="catalog-item-container">
                 <a class="catalog-item__link" href="chicken-small.html">
-                  <img class="catalog-item__img" src="img/rice-small-mobile@1x.jpg" alt="банка Cat Energy Slim 500 г">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                  <img class="catalog-item__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg" alt="банка Cat Energy Slim 500 г">
+                </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -298,7 +330,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__contacts contacts ">
-        <div class="contacts__info contacts__info--form">
+        <div class="contacts__info contacts__info--catalog">
           <h2 class="contacts__title">
             приглашаем <br> к сотрудничеству дилеров!
           </h2>
