--- a/source/catalog.html
+++ b/source/catalog.html
@@ -352,7 +352,7 @@
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer page-footer--catalog">
       <div class="page-footer__contacts contacts ">
         <div class="contacts__info contacts__info--catalog">
           <h2 class="contacts__title">
