--- a/source/form.html
+++ b/source/form.html
@@ -61,15 +61,15 @@
 
         <div class="form__diet-choice">
           <div class="field-container">
-            <input class="form__radio " id="diet_slim" type="radio" name="diet" value="slim" checked="checked">
+            <input class="form__radio " id="diet_slim" type="radio" name="diet" value="slim" checked="checked" tabindex="0">
             <label class="form__label" for="diet_slim">похудение</label>
           </div>
           <div class="field-container">
-            <input class="form__radio " id="diet_mass" type="radio" name="diet" value="waight-gain">
+            <input class="form__radio " id="diet_mass" type="radio" name="diet" value="waight-gain" tabindex="0">
             <label class="form__label" for="diet_mass">набор массы</label>
           </div>
           <div class="field-container">
-            <input class="form__radio " id="diet_no_answer" type="radio" name="diet" value="no-answer">
+            <input class="form__radio " id="diet_no_answer" type="radio" name="diet" value="no-answer" tabindex="0">
             <label class="form__label" for="diet_no_answer">не знаю (нужен ваш совет)</label>
           </div>
         </div>
@@ -106,19 +106,19 @@
             <span>Дополнительно</span></h2>
           <ul class="extra__list">
             <li class="extra__item">
-              <input class="form__checkbox" type="checkbox" name="sweetener" value="sweet" id="sugar" required="required" checked/>
+              <input class="form__checkbox" type="checkbox" name="sweetener" value="sweet" id="sugar" required="required" checked tabindex="0"/>
               <label class="form__label" for="sugar">сахарозаменитель</label>
             </li>
             <li class="extra__item">
-              <input class="form__checkbox" type="checkbox" name="water" value="drink" id="water" required="required"/>
+              <input class="form__checkbox" type="checkbox" name="water" value="drink" id="water" required="required" tabindex="0"/>
               <label class="form__label" for="water">питьевая вода</label>
             </li>
             <li class="extra__item">
-              <input class="form__checkbox" type="checkbox" name="milk" value="drink" id="milk" required="required"/>
+              <input class="form__checkbox" type="checkbox" name="milk" value="drink" id="milk" required="required" tabindex="0"/>
               <label class="form__label" for="milk" >молоко</label>
             </li>
             <li class="extra__item">
-              <input class="form__checkbox" type="checkbox" name="vitamins" value="vitamins"  id="vitamins" required="required"/>
+              <input class="form__checkbox" type="checkbox" name="vitamins" value="vitamins"  id="vitamins" required="required" tabindex="0"/>
               <label class="form__label" for="vitamins">витамины</label>
             </li>
           </ul>
