--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
           <div class="cat-info__weight info">
             <label class="form__label" for="weight_field">вес (кг):<sup>*</sup>
             </label>
-            <input class="form__text" id="weight_field" type="number" name="weight" placeholder="7" required="required"/>
+            <input class="form__text" id="weight_field" type="text" name="weight" placeholder="7" required="required"/>
           </div>
           <div class="cat-info__age info">
             <label class="form__label" for="age_field">возраст (лет):</label>
