--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
       <include src="build/img/sprite.svg"></include>
     </div>
     <header class="page-header page-header--closed">
-      <nav class="main-nav main-nav--closed">
+      <nav class="main-nav main-nav--links-hidden main-nav--links-nojs">
         <div class="main-nav__logo-wrapper">
           <a class="main-nav__logo" href="#">
             <picture>
