--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
       <include src="build/img/sprite.svg"></include>
     </div>
     <header class="page-header page-header--closed">
-      <nav class="main-nav main-nav--closed">
+      <nav class="main-nav main-nav--links-hidden main-nav--links-nojs">
         <div class="main-nav__logo-wrapper">
           <a class="main-nav__logo" href="#">
             <picture>
@@ -55,7 +55,7 @@
           </div>
           <div class="cat-info__age info">
             <label class="form__label" for="age_field">возраст (лет):</label>
-            <input class="form__text" id="age_field" type="number" name="age" placeholder="7"/>
+            <input class="form__text" id="age_field" type="text" name="age" placeholder="7"/>
           </div>
         </div>
 
