Замечания были устранены

--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
           <a class="main-nav__logo" href="#">
             <img class="main-nav__img main-nav__img--text" src="img/icon-logo-mobile-header.svg" alt="">
           </a>
-          <div class="main-nav__toggle"></div>
+          <div class="main-nav__toggle main-nav__toggle--nojs"></div>
         </div>
         <div class="menu menu__list">
           <a class="menu__link menu__link--active">Главная</a>
@@ -122,63 +122,64 @@
             <div class="range-controls"></div>
             <a class="toggle-control toggle-control--right">стало</a>
           </div>
-        </article>
-      </main>
-
-      <footer class="page-footer">
-        <div class="page-footer__contacts contacts ">
-          <div class="contacts__info">
-            <h2 class="contacts__title">
-              приглашаем
-              <br>
-              к сотрудничеству дилеров!
-            </h2>
-            <p class="contacts__address">
-              <span>ул. Большая Конюшенная, д. 19/8</span>
-              Санкт-Петербург
-            </p>
-          </div>
-          <iframe class="contacts__map" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJKadbyg8xlkYRn4c8SdRTnOo&key=AIzaSyDsbAQS4KrgZMDOK9vRIrUqgumi9reKE9c"></iframe>
-          <span class="about-logo about-logo--more contacts__about-logo"></span>
         </div>
-        <div class="footer-wrapper footer-wrapper--main">
-          <div class="page-footer__container">
-            <a class="page-footer__logo" href="#">
-              <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
+      </article>
+    </main>
+
+    <footer class="page-footer">
+      <div class="page-footer__contacts contacts ">
+        <div class="contacts__info">
+          <h2 class="contacts__title">
+            приглашаем
+            <br>
+            к сотрудничеству дилеров!
+          </h2>
+          <p class="contacts__address">
+            <span>ул. Большая Конюшенная, д. 19/8</span>
+            Санкт-Петербург
+          </p>
+        </div>
+        <iframe class="contacts__map" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJKadbyg8xlkYRn4c8SdRTnOo&key=AIzaSyDsbAQS4KrgZMDOK9vRIrUqgumi9reKE9c"></iframe>
+        <span class="about-logo about-logo--more contacts__about-logo"></span>
+      </div>
+      <div class="footer-wrapper footer-wrapper--main">
+        <div class="page-footer__container">
+          <a class="page-footer__logo" href="#">
+            <img class="logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
+          </a>
+
+          <div class="page-footer__social social ">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Мы в ВКонтакте</span>
+              <svg width="25" height="18">
+                <use xlink:href="#icon-vk"></use>
+              </svg>
             </a>
+            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy/">
+              <span class="visually-hidden">Мы в Инстаграме</span>
+              <svg width="18" height="23">
+                <use xlink:href="#icon-insta"></use>
+              </svg>
+            </a>
+            <a class="social__link social__link--facebook" href="https://b-m.facebook.com/htmlacademy/">
+              <span class="visually-hidden">Мы в Фэйсбуке</span>
+              <svg width="14" height="20">
+                <use xlink:href="#icon-fb"></use>
+              </svg>
+            </a>
+          </div>
 
-            <div class="page-footer__social social ">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Мы в ВКонтакте</span>
-                <svg width="30" height="18">
-                  <use xlink:href="#icon-vk"></use>
-                </svg>
-              </a>
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy/">
-                <span class="visually-hidden">Мы в Инстаграме</span>
-                <svg width="23" height="23">
-                  <use xlink:href="#icon-insta"></use>
-                </svg>
-              </a>
-              <a class="social__link social__link--facebook" href="https://b-m.facebook.com/htmlacademy/">
-                <span class="visually-hidden">Мы в Фэйсбуке</span>
-                <svg width="14" height="28">
-                  <use xlink:href="#icon-fb"></use>
-                </svg>
-              </a>
-            </div>
-
-            <div class="page-footer__copyright copyright">
-              <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
-              <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-                <svg width="27" height="34">
-                  <use xlink:href="#icon-html-logo"></use>
-                </svg>
-              </a>
-            </div>
+          <div class="page-footer__copyright copyright">
+            <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
+            <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+              <svg width="28" height="36">
+                <use xlink:href="#icon-html-logo"></use>
+              </svg>
+            </a>
           </div>
         </div>
-      </footer>
-      <script src="js/script.min.js"></script>
-    </body>
-  </html>
+      </div>
+    </footer>
+    <script src="js/script.min.js"></script>
+  </body>
+</html>
