--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,7 +24,7 @@
           <a class="main-nav__logo" href="#">
             <img class="main-nav__img main-nav__img--text" src="img/icon-logo-mobile-header.svg" alt="">
           </a>
-          <div class="main-nav__toggle"></div>
+          <div class="main-nav__toggle main-nav__toggle--nojs"></div>
         </div>
         <div class="menu menu__list">
           <a class="menu__link" href="index.html">Главная</a>
@@ -49,7 +49,7 @@
                     <source media="(min-width: 1300px)" srcset="img/catalog-chicken-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
                     <img class="catalog-item__img" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg" alt="банка Cat Energy Pro 500 г">
-                </picture>
+                  </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -85,8 +85,8 @@
                     <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp 1x, img/chicken-big-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                  <img class="catalog-item__img" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg" alt=">банка Cat Energy Pro 1000 г">
-                  <picture>
+                    <img class="catalog-item__img" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg" alt=">банка Cat Energy Pro 1000 г">
+                  </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -122,8 +122,8 @@
                     <source type="image/webp" srcset="img/fish-small-mobile@1x.webp 1x, img/fish-small-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-                  <img class="catalog-item__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg" alt="банка Cat Energy Pro 500 г">
-                </picture>
+                    <img class="catalog-item__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg" alt="банка Cat Energy Pro 500 г">
+                  </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -159,8 +159,8 @@
                     <source type="image/webp" srcset="img/fish-big-mobile@1x.webp 1x, img/fish-big-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-                  <img class="catalog-item__img" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg" alt="банка Cat Energy Pro 1000 г">
-                </picture>
+                    <img class="catalog-item__img" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg" alt="банка Cat Energy Pro 1000 г">
+                  </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -196,8 +196,8 @@
                     <source type="image/webp" srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-                  <img class="catalog-item__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg" alt="банка Cat Energy Slim 500 г">
-                </picture>
+                    <img class="catalog-item__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg" alt="банка Cat Energy Slim 500 г">
+                  </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -233,8 +233,8 @@
                     <source type="image/webp" srcset="img/buckwheat-big-mobile@1x.webp 1x, img/buckwheat-big-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-                  <img class="catalog-item__img" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg" alt="банка Cat Energy Slim 1000 г">
-                </picture>
+                    <img class="catalog-item__img" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg" alt="банка Cat Energy Slim 1000 г">
+                  </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -270,8 +270,8 @@
                     <source type="image/webp" srcset="img/rice-small-mobile@1x.webp 1x, img/rice-small-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-                  <img class="catalog-item__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg" alt="банка Cat Energy Slim 500 г">
-                </picture>
+                    <img class="catalog-item__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg" alt="банка Cat Energy Slim 500 г">
+                  </picture>
                 </a>
                 <div class="catalog-item__text">
                   <a class="catalog-item__title-link" href="chicken-small.html">
@@ -297,7 +297,7 @@
             <a class="button catalog-item__button" href="#">заказать</a>
           </article>
           <div class="page-catalog__more more">
-            <a class="button--upload-items" href="#">+</a>
+            <a class="button button--upload-items" href="#">+</a>
             <h3 class="more__promo-title">показать еще 100500 товаров</h3>
             <p class="more__proviso">На самом деле вкусов гораздо больше!</p>
             <a class="button button--show-more" href="#">показать все</a>
@@ -305,7 +305,8 @@
         </section>
 
         <div class="page-catalog__addition addition">
-          <h2 class="addition__title title"><span>Дополнительные товары<span></h2>
+          <h2 class="addition__title title">
+            <span>Дополнительные товары</span></h2>
           <ul class="addition-list">
             <li class="addition-item">
               <h3 class="addition-item__title">сахарозаменитель</h3>
@@ -345,18 +346,22 @@
           </ul>
           <div class="special-offer">
             <p class="special-offer__description">
-              Закажите все <br> и получите чехол для кота в подарок!
+              Закажите все
+              <br>
+              и получите чехол для кота в подарок!
             </p>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="page-footer page-footer--catalog">
-      <div class="page-footer__contacts contacts ">
-        <div class="contacts__info contacts__info--catalog">
+    <footer class="page-footer">
+      <div class="page-footer__contacts contacts contacts--form">
+        <div class="contacts__info contacts__info--form">
           <h2 class="contacts__title">
-            приглашаем <br> к сотрудничеству дилеров!
+            приглашаем
+            <br>
+            к сотрудничеству дилеров!
           </h2>
           <p class="contacts__address">
             <span>ул. Большая Конюшенная, д. 19/8</span>
@@ -366,28 +371,28 @@
         <iframe class="contacts__map" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJKadbyg8xlkYRn4c8SdRTnOo&key=AIzaSyDsbAQS4KrgZMDOK9vRIrUqgumi9reKE9c"></iframe>
         <span class="about-logo about-logo--more contacts__about-logo"></span>
       </div>
-      <div class="footer-wrapper footer-wrapper--catalog">
+      <div class="footer-wrapper footer-wrapper--main">
         <div class="page-footer__container">
           <a class="page-footer__logo" href="#">
-            <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
+            <img class="logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
           </a>
 
           <div class="page-footer__social social ">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Мы в ВКонтакте</span>
-              <svg width="30" height="16">
+              <svg width="25" height="18">
                 <use xlink:href="#icon-vk"></use>
               </svg>
             </a>
             <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy/">
               <span class="visually-hidden">Мы в Инстаграме</span>
-              <svg width="23" height="23">
+              <svg width="18" height="23">
                 <use xlink:href="#icon-insta"></use>
               </svg>
             </a>
             <a class="social__link social__link--facebook" href="https://b-m.facebook.com/htmlacademy/">
               <span class="visually-hidden">Мы в Фэйсбуке</span>
-              <svg width="14" height ="28">
+              <svg width="14" height="20">
                 <use xlink:href="#icon-fb"></use>
               </svg>
             </a>
@@ -396,7 +401,7 @@
           <div class="page-footer__copyright copyright">
             <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
             <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-              <svg width="27" height="34">
+              <svg width="28" height="36">
                 <use xlink:href="#icon-html-logo"></use>
               </svg>
             </a>
