--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,11 +18,11 @@
             <picture>
               <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
               <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-              <img class="main-nav__img main-nav__img--logo" src="img/icon-logo-mobile.svg" alt="">
+              <img class="main-nav__img main-nav__img--logo" src="img/icon-logo-mobile.svg" width="33px" height="37px" alt="">
             </picture>
           </a>
           <a class="main-nav__logo" href="#">
-            <img class="main-nav__img main-nav__img--text" src="img/icon-logo-mobile-header.svg" alt="">
+            <img class="main-nav__img main-nav__img--text" src="img/icon-logo-mobile-header.svg" width="109px" height="18px" alt="">
           </a>
           <div class="main-nav__toggle main-nav__toggle--nojs"></div>
         </div>
