--- a/source/index.html
+++ b/source/index.html
@@ -38,10 +38,10 @@
           <h2 class="slogan__reason">занялся собой? займись котом!</h2>
         </div>
         <picture>
-          <source media="(min-width: 1300px)" srcset="img/index-can-desktop@2x.png">
-          <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="img/index-can-tablet@2x.jpg">
-          <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg">
+          <source type="image/webp" media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x ">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/index-can-tablet@1x.webp 1x, img/index-can-tablet@2x.webp 2x ">
+          <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x ">
+          <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x ">
           <img class="food-packaging" src="img/index-can-mobile@1x.png" alt="Cat energy Pro">
         </picture>
         <a class="button page-header__button" href="form.html">Подобрать программу</a>
@@ -108,11 +108,15 @@
             </h3>
           </div>
           <picture>
+            <source type="image/webp" media="(min-width: 1300px)" srcset="img/before-desktop@1x.webp 1x, img/before-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/before-tablet@1x.webp 1x, img/before-tablet@2x.webp 2x">
             <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
             <img class="proof__img proof__img--before" src="img/before-mobile@1x.png" alt="Фото-пруф кота до изменения">
           </picture>
           <picture>
+            <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.webp 1x, img/after-desktop@2x.webp 2x">
+            <source media="(min-width: 768px)" srcset="img/after-tablet@1x.webp 1x, img/after-tablet@2x.webp 2x">
             <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
             <img class="proof__img proof__img--after" src="img/after-mobile@1x.png" alt="Фото-пруф кота после изменения">
