--- a/source/index.html
+++ b/source/index.html
@@ -115,8 +115,8 @@
             <img class="proof__img proof__img--before" src="img/before-mobile@1x.png" alt="Фото-пруф кота до изменения">
           </picture>
           <picture>
-            <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.webp 1x, img/after-desktop@2x.webp 2x">
-            <source media="(min-width: 768px)" srcset="img/after-tablet@1x.webp 1x, img/after-tablet@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1300px)" srcset="img/after-desktop@1x.webp 1x, img/after-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/after-tablet@1x.webp 1x, img/after-tablet@2x.webp 2x">
             <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
             <img class="proof__img proof__img--after" src="img/after-mobile@1x.png" alt="Фото-пруф кота после изменения">
