--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link href="./css/style.min.css" rel="stylesheet">
+    <link href="./fonts/oswaldmedium.woff2" rel="preload">
+    <link href="./fonts/oswaldregular.woff2" rel="preload">
   </head>
   <body>
     <div style="display:none">
@@ -180,6 +182,7 @@
           <div class="page-footer__copyright copyright">
             <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
             <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+              <span class="visually-hidden">HTML academy</span>
               <svg width="28" height="36">
                 <use xlink:href="#icon-html-logo"></use>
               </svg>
