--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link href="./css/style.min.css" rel="stylesheet">
-    <link href="./fonts/oswaldmedium.woff2" rel="preload">
-    <link href="./fonts/oswaldregular.woff2" rel="preload">
+    <link href="./fonts/oswaldmedium.woff2" rel="preload" as="font">
+    <link href="./fonts/oswaldregular.woff2" rel="preload" as="font">
   </head>
   <body>
     <div style="display:none">
@@ -20,13 +20,15 @@
             <picture>
               <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
               <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-              <img class="main-nav__img main-nav__img--logo" src="img/icon-logo-mobile.svg" width="33px" height="37px" alt="">
+              <img class="main-nav__img main-nav__img--logo" src="img/icon-logo-mobile.svg" width="33" height="37" alt="Главный логотип">
             </picture>
           </a>
           <a class="main-nav__logo" href="#">
-            <img class="main-nav__img main-nav__img--text" src="img/icon-logo-mobile-header.svg" width="109px" height="18px" alt="">
+            <img class="main-nav__img main-nav__img--text" src="img/icon-logo-mobile-header.svg" width="109" height="18" alt="Текстовый логотип">
           </a>
-          <div class="main-nav__toggle main-nav__toggle--nojs"></div>
+          <div class="main-nav__toggle main-nav__toggle--nojs">
+            <span class="visually-hidden">Меню-бургер</span>
+          </div>
         </div>
         <div class="menu menu__list">
           <a class="menu__link menu__link--active">Главная</a>
